add logo, make navbar

--- a/webapp/Chalk_and_Slate/index.html
+++ b/webapp/Chalk_and_Slate/index.html
@@ -1,1 +1,24 @@
-<p>Hello World!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Chalk & Slate
+        </title>
+        <link rel="stylesheet" type="text/css" href="app.css">
+    </head>
+    <body>
+        <div id="logoContainer">
+            <a href="#home">
+                <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60">
+            </a>
+        </div>
+        <ul>
+          <li><a href="#classes">Classes</a></li>
+          <li><a href="#clinical">Clinical</a></li>
+          <li><a href="#inbox">Inbox</a></li>
+          <li><a href="#social">Social</a></li>
+        </ul>
+        <div container="container">
+        </div>
+    </body>
+</html>
