--- a/webapp/Chalk_and_Slate/index.html
+++ b/webapp/Chalk_and_Slate/index.html
@@ -19,6 +19,7 @@
           <li><a href="#social">Social</a></li>
         </ul>
         <div container="container">
+          <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sp6fks2020%40gmail.com&amp;color=%231C887A&amp;ctz=America%2FNew_York" style="border-width:10" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </body>
 </html>
