--- a/webapp/Chalk_and_Slate/index.html
+++ b/webapp/Chalk_and_Slate/index.html
@@ -11,18 +11,22 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="upperContainer col-sm-12">
-            <div id="logoContainer" class="col-sm-8 top-bottom-padding">
+        <div class="row">
+            <div id="userNameContainer" class="col-sm-12">
+                <span>
+                    Welcome, Sarah P.
+                </span>
+            </div>
+        </div>
+        <div class="row">
+            <div id="logoContainer" class="col-sm-12 top-bottom-padding">
                 <a href="#home">
                     <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60">
                 </a>
             </div>
-            <div id="userNameContainer" class="col-sm-3 top-bottom-padding">
-                Welcome, Sarah P.
-            </div>
         </div>
         <ul id="navbarList" class="linkList">
-          <li><a href="#classes">Classes</a></li>
+          <li class='active'><a href="#classes">Classes</a></li>
           <li><a href="#clinical">Clinical</a></li>
           <li><a href="#inbox">Inbox</a></li>
           <li><a href="#social">Social</a></li>
@@ -41,6 +45,13 @@
             <li><a href="#social">Social</a></li>
             <li><a href="#profile">Profile</a></li>
         </ul>
+        <div class="row">
+            <div id="copyrightContainer" class="col-sm-12">
+                <span class="copyrightText">
+                    Copyright 2018 by Chalk & Slate.
+                </span>
+            </div>
+        </div>
     </body>
 </html>
 
