added logo and updated opacity

--- a/webapp/Chalk_and_Slate/login.html
+++ b/webapp/Chalk_and_Slate/login.html
@@ -12,7 +12,13 @@
 </head>
 <body class="bodylogin">
   <div class="container-login" >
+
     <div class = "container-login3">
+      <div id="logoContainer" class="col-sm-12 top-bottom-padding">
+          <a href="#home">
+              <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60">
+          </a>
+      </div>
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="sp6fks2020" name="uname" required>
 
