Add class details

--- a/webapp/Chalk_and_Slate/classDetail.html
+++ b/webapp/Chalk_and_Slate/classDetail.html
@@ -26,13 +26,41 @@
             </div>
         </div>
         <ul id="navbarList" class="linkList">
-          <li><a href="classes.html">Classes</a></li>
+          <li class='active'><a href="classes.html">Classes</a></li>
           <li><a href="#">Clinical</a></li>
           <li><a href="https://xd.adobe.com/view/482e6871-ca60-4284-57e5-a28522a6a491-3e1f/">Inbox</a></li>
           <li><a href="https://xd.adobe.com/view/01cdd5da-f302-43a8-7f06-5124410813a4-77fc/">Social</a></li>
         </ul>
         <div class="container col-sm-12">
-            <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sp6fks2020%40gmail.com&amp;color=%231C887A&amp;ctz=America%2FNew_York" style="border-width:10" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <ul id="verticalNavbar" class="linkList">
+                        <li class="active"><a href="#">Basic Info</a></li>
+                        <li><a href="#">Assignments</a></li>
+                        <li><a href="#">Grades</a></li>
+                        <li><a href="#">Files</a></li>
+                        <li><a href="#">Calendar</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-9">
+                    <h3>Mind, Brain, & Behavior 685</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, dictas habemus ius an. An nec meis assum. No qui molestiae signiferumque mediocritatem. Cum laoreet detraxit at, pro euismod detracto invidunt ex. Eos scripta oblique interpretaris at. Pro assentior intellegam ad, vix invidunt perfecto et, eam inani indoctum mediocrem no.
+                    </p>
+                    <p>
+                        Quo eu quidam iudicabit prodesset. Antiopam philosophia eam an. Ut eius diceret cum, ad mel liber vocibus corpora. Sit et cibo ipsum, has an nobis doming evertitur. Sed eu purto mazim adipiscing, mea veri fierent cu, harum eleifend vis id. Integre labitur appetere ad pri, eu dolorum inimicus euripidis nam.
+                    </p>
+                    <p>
+                        No est decore consul conceptam, ea ceteros persequeris eam, timeam nonumes delicatissimi ad eum. Quo ut audiam accommodare reprehendunt, vel posse voluptatum in, adhuc quaerendum cu sea. Ut eum tation populo moderatius. Mei autem bonorum ex, dicam viderer vivendo ut his. Mea te nonumy concludaturque, at mucius dolorum appetere per, saepe eripuit duo ut.
+                    </p>
+                    <p>
+                        Per ad adhuc porro homero, nec ei docendi pericula. His choro eruditi voluptatibus ne, per ut hinc nusquam. Diam persius pri ne. Te agam quot disputationi has, an assum vituperatoribus nam. Liber electram dissentias sea ad, at eligendi mediocritatem concludaturque nam, nam in congue fabellas postulant.
+                    </p>
+                    <p>
+                        Ut eum quas ancillae, eripuit offendit nominati ex pri, cu his brute melius fuisset. Nec alienum nominavi intellegebat in. Novum nostro ancillae per in, ius animal admodum ad, an est liber semper. Te vero tantas per, ad cum probo alienum, nobis consequat in has.
+                    </p>
+                </div>
+            </div>
         </div>
         <div id="main-quote2">
           <p id="main-quote"></p>
