--- a/webapp/Chalk_and_Slate/classes.html
+++ b/webapp/Chalk_and_Slate/classes.html
@@ -26,13 +26,27 @@
             </div>
         </div>
         <ul id="navbarList" class="linkList">
-          <li><a href="classes.html">Classes</a></li>
+          <li class='active'><a href="classes.html">Classes</a></li>
           <li><a href="#">Clinical</a></li>
           <li><a href="https://xd.adobe.com/view/482e6871-ca60-4284-57e5-a28522a6a491-3e1f/">Inbox</a></li>
           <li><a href="https://xd.adobe.com/view/01cdd5da-f302-43a8-7f06-5124410813a4-77fc/">Social</a></li>
         </ul>
         <div class="container col-sm-12">
-            <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sp6fks2020%40gmail.com&amp;color=%231C887A&amp;ctz=America%2FNew_York" style="border-width:10" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <h3>Classes</h3>
+            <div id="classBoxContainer" class="row">
+                <div class="classBox col-lg-10 col-xl-5">
+                    <span><a href="classDetail.html">Mind, Brain, & Behavior</a><span>
+                </div>
+                <div class="classBox col-lg-10 col-xl-5">
+                    <span><a href="classDetail.html">Hematology</a></span>
+                </div>
+                <div class="classBox col-lg-10 col-xl-5">
+                    <span><a href="classDetail.html">Emergency Medicine</a></span>
+                </div>
+                <div class="classBox col-lg-10 col-xl-5">
+                    <span><a href="classDetail.html">Neurosurgery</a></span>
+                </div>
+            </div>
         </div>
         <div id="main-quote2">
           <p id="main-quote"></p>
@@ -43,7 +57,7 @@
             <li><a href="#">Clinical</a></li>
             <li><a href="https://xd.adobe.com/view/482e6871-ca60-4284-57e5-a28522a6a491-3e1f/">Inbox</a></li>
             <li><a href="https://xd.adobe.com/view/01cdd5da-f302-43a8-7f06-5124410813a4-77fc/">Social</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a>Profile</a></li>
         </ul>
         <div class="row">
             <div id="copyrightContainer" class="col-sm-12">
