added some aria labels

--- a/webapp/Chalk_and_Slate/login.html
+++ b/webapp/Chalk_and_Slate/login.html
@@ -16,21 +16,21 @@
     <div class = "container-login3">
       <div id="logoContainer" class="col-sm-12 top-bottom-padding">
           <a href="#home">
-              <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60">
+              <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60" aria-lable="Chalk and Slate logo">
           </a>
       </div>
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="sp6fks2020" name="uname" required>
+      <label for="uname" ><b>Username</b></label>
+      <input type="text" placeholder="sp6fks2020" aria-lable"Enter your username below" name="uname" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="test_password" name="psw" required>
+      <label for="psw" ><b>Password</b></label>
+      <input type="password" placeholder="test_password" aria-lable"Enter your password below" name="psw" required>
 
       <form action="index.html">
-        <button class="loginbtn" type="submit">Login</button>
+        <button class="loginbtn" aria-lable"Login button"type="submit">Login</button>
         <label class="rememberlabel">
-          <input type="checkbox" checked="checked" name="remember"> Remember me
+          <input type="checkbox" checked="checked" aria-lable="Remember me" name="remember"> Remember me
         </label>
-        <span class="psw">Forgot <a href="#">password?</a></span>
+        <span class="psw" aria-label="Forgot your password?">Forgot <a href="#">password?</a></span>
       </form>
 
   </div>
