Add font-awesome and finish

--- a/webapp/Chalk_and_Slate/login.html
+++ b/webapp/Chalk_and_Slate/login.html
@@ -16,7 +16,7 @@
     <div class = "container-login3">
       <div id="logoContainer" class="col-sm-12 top-bottom-padding">
           <a href="#home">
-              <img src="LOGOchalkAndSlate.png" alt="Chalk and Slate logo" height="60" aria-lable="Chalk and Slate logo">
+              <img src="LOGINchalkAndSlate.png" alt="Chalk and Slate logo" height="60" aria-lable="Chalk and Slate logo">
           </a>
       </div>
       <label for="uname" ><b>Username</b></label>
