--- a/webapp/Chalk_and_Slate/classDetail.html
+++ b/webapp/Chalk_and_Slate/classDetail.html
@@ -6,9 +6,13 @@
         </title>
         <link rel="stylesheet" type="text/css" href="app.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="row">
@@ -31,7 +35,7 @@
           <li><a href="https://xd.adobe.com/view/482e6871-ca60-4284-57e5-a28522a6a491-3e1f/">Inbox</a></li>
           <li><a href="https://xd.adobe.com/view/01cdd5da-f302-43a8-7f06-5124410813a4-77fc/">Social</a></li>
         </ul>
-        <div class="container col-sm-12">
+        <div class="container classDetails col-sm-12">
             <div class="row">
                 <div class="col-sm-12 col-md-3">
                     <ul id="verticalNavbar" class="linkList">
@@ -41,8 +45,11 @@
                         <li><a href="#">Files</a></li>
                         <li><a href="#">Calendar</a></li>
                     </ul>
+                    <span id="iconMenu">
+                        <i class="fa fa-bars"></i>
+                    </span>
                 </div>
-                <div class="col-sm-12 col-md-9">
+                <div id="classDetailContainer" class="col-sm-12 col-md-9">
                     <h3>Mind, Brain, & Behavior 685</h3>
                     <p>
                         Lorem ipsum dolor sit amet, dictas habemus ius an. An nec meis assum. No qui molestiae signiferumque mediocritatem. Cum laoreet detraxit at, pro euismod detracto invidunt ex. Eos scripta oblique interpretaris at. Pro assentior intellegam ad, vix invidunt perfecto et, eam inani indoctum mediocrem no.
