--- a/webapp/Chalk_and_Slate/classes.html
+++ b/webapp/Chalk_and_Slate/classes.html
@@ -6,9 +6,12 @@
         </title>
         <link rel="stylesheet" type="text/css" href="app.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="row">
@@ -32,7 +35,7 @@
           <li><a href="https://xd.adobe.com/view/01cdd5da-f302-43a8-7f06-5124410813a4-77fc/">Social</a></li>
         </ul>
         <div class="container col-sm-12">
-            <h3>Classes</h3>
+            <h3 id="classPageHeader">Classes</h3>
             <div id="classBoxContainer" class="row">
                 <div class="classBox col-lg-10 col-xl-5">
                     <span><a href="classDetail.html">Mind, Brain, & Behavior</a><span>
